# PolyglotWhisperer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_auth_workspaces_vocab.py  0003_workers.py  0004_flashcards.py  0005_flashcard_refinement.py  0006_user_credentials.py
config/: default.toml
docker/: entrypoint.sh
frontend/: README.md  build.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: api.ts  dom.ts  index.css  jobs.ts  main.tsx  routeTree.gen.ts  types.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: header.tsx
frontend/src/lib/: format.ts  theme.ts  vtt.ts
frontend/src/routes/: __root.tsx  admin.users.tsx  index.tsx  library.$slug.$ts.tsx  library.index.tsx  library.tsx  login.tsx  review.tsx  settings.tsx  setup.tsx  studio.tsx
src/pgw/: __init__.py  errors.py
src/pgw/audio/: __init__.py  clips.py
src/pgw/auth/: __init__.py  bootstrap.py  csrf.py  deps.py  passwords.py  sessions.py
src/pgw/cli/: admin.py  app.py  clean.py  export.py  languages.py  maintenance.py  play.py  run.py  serve.py  transcribe.py  translate.py  utils.py  vocab.py  worker.py
src/pgw/config/: default.toml
src/pgw/core/: config.py  context.py  events.py  languages.py  models.py  pipeline.py
src/pgw/crypto/: encryption.py
src/pgw/db/: __init__.py  base.py  engine.py  session.py  types.py
src/pgw/downloader/: resolver.py  ytdlp.py
src/pgw/llm/: chunking.py  cleanup.py  client.py  combine.py  flashcard.py  prompts.py  refine.py  translator.py
src/pgw/maintenance/: __init__.py  backfill.py  flashcards_backfill.py
src/pgw/player/: mpv_player.py
src/pgw/server/: app.py  embed.py  exceptions.py  flashcard_refine.py  handlers.py  jobs.py  sync.py  templates.py  worker_registry.py
src/pgw/srs/: __init__.py  (+1 more)
tests/: conftest.py  test_api_regroup.py  test_api_transcriber.py  test_audio_clips.py  test_auth.py  test_backfill.py  test_cache.py  test_cli_batch.py  test_cli_utils.py  test_config.py  test_context.py  test_converter.py  test_credentials.py  test_credentials_integration.py  test_db_smoke.py  test_embed.py  test_events.py  test_export.py  test_flashcard_backfill.py  test_flashcard_refine.py  test_flashcards.py  test_format_fallback.py  test_fsrs_engine.py  test_integration.py  test_llm.py  test_models.py  test_paths.py  test_prompts.py  test_resolver.py  test_serve_app.py  test_server_templates.py  test_sliding_window.py  test_translator_chunking.py  test_vocab_summary.py  test_worker_contract.py  test_workers.py
tests/fixtures/: sample.srt  sample.vtt
(+55 files in other folders)
